--- a/package.json
+++ b/package.json
@@ -11,29 +11,37 @@
     "test:ci": "meteor test --once --driver-package dispatch:mocha-phantomjs"
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0-beta.38",
+    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.40",
+    "@babel/plugin-proposal-decorators": "^7.0.0-beta.40",
+    "@babel/preset-typescript": "^7.0.0-beta.38",
     "@types/chai": "3.4.34",
-    "@types/meteor": "^1.3.31",
+    "@types/meteor": "^1.4.13",
     "@types/mocha": "2.2.34",
     "chai": "3.5.0",
     "chai-spies": "0.7.1",
-    "meteor-node-stubs": "0.2.4"
+    "meteor-node-stubs": "^0.2.11"
   },
   "dependencies": {
-    "@angular/common": "2.4.1",
-    "@angular/compiler": "2.4.1",
-    "@angular/core": "2.4.1",
-    "@angular/forms": "2.4.1",
-    "@angular/platform-browser": "2.4.1",
-    "@angular/platform-browser-dynamic": "2.4.1",
-    "@angular/router": "3.4.1",
-    "angular2-meteor": "0.7.1",
-    "angular2-meteor-polyfills": "0.1.1",
-    "angular2-meteor-tests-polyfills": "0.0.2",
-    "babel-runtime": "^6.18.0",
-    "meteor-rxjs": "0.4.7",
-    "reflect-metadata": "0.1.9",
-    "rxjs": "5.0.2",
-    "zone.js": "0.7.4",
-    "cheerio": "0.22.0"
+    "@babel/runtime": "^7.0.0-beta.40",
+    "babel-runtime": "^6.26.0",
+    "cheerio": "0.22.0",
+    "meteor-rxjs": "^0.4.8",
+    "rxjs": "^5.5.6",
+    "vue": "^2.5.13",
+    "vue-class-component": "^6.1.2",
+    "vue-meta": "^0.5.6",
+    "vue-meteor-tracker": "^1.2.3"
+  },
+  "babel": {
+    "plugins": [
+      "@babel/plugin-proposal-decorators",
+      [
+        "@babel/plugin-proposal-class-properties",
+        {
+          "loose": true
+        }
+      ]
+    ]
   }
 }
