--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,10 +9,11 @@
     "moduleResolution": "node",
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
-    "sourceMap": true
+    "sourceMap": true,
+    "allowSyntheticDefaultImports": true
   },
   "exclude": [
-    "node_modules"
+    "node_modules",
   ],
   "files": [
     "typings.d.ts"
